<resources>
    <string name="app_name">OrderApp</string>

    <string name="my_text"><u>Đổi mật khẩu</u></string>
    <string name="my_text5"><u>Đổi họ và tên</u></string>
    <string name="my_text3"><u>Đổi địa chỉ</u></string>
    <string name="my_text4"><u>Đổi số điện thoại</u></string>
    <string name="my_text2"><u>Đăng xuất</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>